--- a/E-Ticket_web.html
+++ b/E-Ticket_web.html
@@ -10,8 +10,8 @@
 </head>
 <body>
 	<div class="container px-4 bg-light">
-	<!--大標題-->
-		<h1 class="p-3 mb-2 bg-primary text-white container-fluid text-center">澎湖之美旅行社</h1>
+	<!--大標題 container網格容器 排版用包含(px,gx,p,col...)/-->
+		<h1 class="p-3 mb-2 bg-primary text-white text-center">澎湖之美旅行社</h1>
 
 	<figure class="text-center">
   <blockquote class="blockquote">
@@ -22,72 +22,72 @@
   </figcaption>
 </figure>
 
-	<div class="container px-4">
-		<table class="table-bordered table table-sm table-responsive-sm">
+	<div class="container px-4 " style="width: 400px; font-family:DFKai-sb;">
+		<table class=" border-dark table-primary table-bordered table table-sm table-responsive-sm" style="padding-top: 50%;" id="myTable">
 			<tr class="col">
-				<td class="text-center" colspan="2">澎湖之美旅行社-電子票券</td>
+				<td class="border-2 text-center" colspan="2">澎湖之美旅行社-電子票券</td>
 			</tr>
-			<tr class="ticket-row ">
-				<td class="">旅客/電話</td>
-				<td class="ticket-column"></td>
+			<tr class="border-2 border-top-0 border-bottom-0">
+				<td class="border-1" style="width: 35%;">旅客/電話</td>
+				<td class="border-1"></td>
 			</tr>
-			<tr class="ticket-row">
-				<td class="ticket-column">日期/行程/人數</td>
-				<td class="ticket-column"></td>
+			<tr class="border-2 border-top-0 border-bottom-0">
+				<td class="border-1">日期/行程/人數</td>
+				<td class="border-1"></td>
 			</tr>
-			<tr class="ticket-row">
-				<td class="ticket-column">報到/開始時間</td>
-				<td class="ticket-column"></td>
+			<tr class="border-2 border-top-0 border-bottom-0">
+				<td class="border-1">報到/開始時間</td>
+				<td class="border-1"></td>
 			</tr>
-			<tr class="ticket-row">
-				<td class="ticket-column">行程業者</td>
-				<td class="ticket-column"></td>
+			<tr class="border-2 border-top-0 border-bottom-0">
+				<td class="border-1">行程業者</td>
+				<td class="border-1"></td>
 			</tr>
-			<tr class="ticket-row">
-				<td class="ticket-column">報到地點</td>
-				<td class="ticket-column"></td>
+			<tr class="border-2 border-top-0 border-bottom-0">
+				<td class="border-1">報到地點</td>
+				<td class="border-1"></td>
 			</tr>
-			<tr class="ticket-row">
-				<td class="ticket-column">備註</td>
-				<td class="ticket-column"></td>
+			<tr class="border-2 border-top-0">
+				<td class="border-1">備註</td>
+				<td class="border-1" style="flex: 1;"></td>
 			</tr>
 		</table>
 	</div>
 	
-  		<div class="container px-4">
+  		<div class="container px-6 text-center " style="width: 400px;">
   		<div class="row justify-content-center gx-6">
     		<div class="col">
-    			<div class="border p-2">
-      			<button type="button" class="btn btn-primary btn">複製圖片</button>
+    			<div class="p-2">
+      			<button type="button" class="btn btn-primary">複製圖片</button>
       		</div>
     		</div>
     		<div class="col">
-    			<div class="border p-2">
-      			<button type="button" class="btn btn-primary btn">下載圖片</button>
+    			<div class="p-2">
+      			<button type="button" class="btn btn-primary" id="convert">下載圖片</button>
       		</div>
     		</div>
     		<div class="col">
-    			<div class="border p-2">
-      			<button type="button" class="btn btn-primary btn">分享到~</button>
+    			<div class="p-2">
+      			<button type="button" class="btn btn-primary">分享到~</button>
       		</div>
     		</div>
   		</div>
   		</div>
 
-  		<div class="container px-4">
+  		<div class="container px-6 text-center " style="width: 400px;">
   		<div class="row justify-content-center gx-6">
     		<div class="col">
-    			<div class="border p-2">
+    			<div class="p-2">
       			<button type="button" class="btn btn-primary">歷史資料</button>
       			</div>
     		</div>
     		<div class="col">
-    				<div class="border p-2">
+    				<div class="p-2">
       			<button type="button" class="btn btn-primary">批量製作</button>
       			</div>
     		</div>
     		<div class="col">
-    			<div class="border p-2">
+    			<div class="p-2">
       			<button type="button" class="btn btn-primary">還在想~</button>
       			</div>
     		</div>
@@ -97,10 +97,31 @@
   	</div>	
 
 
-	<!--script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script-->
+<div id="result">
+         <!-- Result will appear be here -->
+      </div>
+
+<script type="text/javascript" src="https://github.com/niklasvh/html2canvas/releases/download/0.5.0-alpha1/html2canvas.js"></script>
+      <script>
+         //convert table to image            
+         function convertToImage() {
+            var resultDiv = document.getElementById("result");
+            html2canvas(document.getElementById("myTable"), {
+                onrendered: function(canvas) {
+                    var img = canvas.toDataURL("image/png");
+                    result.innerHTML = '<a download="test.jpeg" href="'+img+'">test</a>';
+                    }
+            });
+         }        
+         //click event
+         var convertBtn = document.getElementById("convert");
+         convertBtn.addEventListener('click', convertToImage);
+      </script>
+
+	<!--script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 	
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.1/dist/umd/popper.min.js" integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN" crossorigin="anonymous"></script>
 	
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script-->
 </body>
 </html>
