--- a/index.html
+++ b/index.html
@@ -4,54 +4,17 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>E-ticket</title>
-	<!--網路加入檔案-->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-	<!--本地加入檔案，尚未測試成功-->
-	<!--script type="text/javascript" src="C:\Users\may\Desktop\測試PA\bootstrap.min"></script>
-	<link rel="stylesheet" href="C:\Users\may\Desktop\測試PA\bootstrap.min"-->
-  
-  <style>
-    /* 彈出視窗的基本樣式 */
-    .modal {
-      display: none;  /* 初始隱藏 */
-      position: fixed;
-      z-index: 1; /* 確保彈出視窗在最上層 */
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.5); /* 半透明背景 */
-      justify-content: center;
-      align-items: center;
-    }
-
-    /* 彈出視窗內容樣式 */
-    .modal-content {
-      background-color: white;
-      padding: 20px;
-      border-radius: 5px;
-      width: 300px;
-      text-align: center;
-    }
-
-    /* 關閉按鈕樣式 */
-    .close {
-      color: #aaa;
-      float: right;
-      font-size: 28px;
-      font-weight: bold;
-    }
-
-    .close:hover,
-    .close:focus {
-      color: black;
-      text-decoration: none;
-      cursor: pointer;
-    }
-  </style>
-
+	<!--Local加入CSS檔案，注意路徑寫法-->
+	<link rel="stylesheet" href="css\bootstrap.min.css">
+	<link rel="stylesheet" href="css\style.css">
+	<!--Local加入JS檔案，注意路徑寫法-->
+	<script defer src="bootstrap.min.js.map"></script>
+	<script defer src="js/javascript.js"></script>
+	<script defer src="js/html2canvas.js"></script>
 </head>
+
 <body>
+	
 	<div class="container px-4 bg-light">
 	<!--大標題 container網格容器 排版用包含(px,gx,p,col...)/-->
 		<h1 class="p-3 mb-2 bg-primary text-white text-center">澎湖之美旅行社</h1>
@@ -61,8 +24,8 @@
     <p>票券生產器網頁版</p>
   </blockquote>
   <figcaption class="blockquote">
-  	<!-- 觸發彈出視窗，讓人可以輸入票券資料的按鈕 -->
-    <button class="btn btn-lg btn-danger fw-bold" id="openModalBtn">點這粒開始製作</button>
+  	<!-- 觸發彈出視窗，讓人可以輸入票券資料的按鈕，ID是run-->
+    <button class="btn btn-lg btn-danger fw-bold" id="run">點這粒開始製作</button>
   </figcaption>
 </figure>
 
@@ -140,64 +103,110 @@
 
   	</div>	
 
-  	  <!-- 彈出視窗 -->
-  <div id="myModal" class="modal">
-    <div class="modal-content">
-      <span class="close text-end" id="closeModalBtn">&times;</span>
-      <p>這是彈出式視窗內容</p>
-    </div>
-  </div>
-
-
-<div id="result">
+	<!--測試寫法-->
+	<div id="result">
          <!-- Result will appear be here -->
-      </div>
-
-<script type="text/javascript" src="https://github.com/niklasvh/html2canvas/releases/download/0.5.0-alpha1/html2canvas.js"></script>
-      <script>
-         //convert table to image            
-         function convertToImage() {
-            var resultDiv = document.getElementById("result");
-            html2canvas(document.getElementById("myTable"), {
-                onrendered: function(canvas) {
-                    var img = canvas.toDataURL("image/png");
-                    result.innerHTML = '<a download="test.jpeg" href="'+img+'">test</a>';
-                    }
-            });
-         }        
-         //click event
-         var convertBtn = document.getElementById("convert");
-         convertBtn.addEventListener('click', convertToImage);
-    
-
-          // 獲取彈出視窗和按鈕元素
-    const modal = document.getElementById("myModal");
-    const openModalBtn = document.getElementById("openModalBtn");
-    const closeModalBtn = document.getElementById("closeModalBtn");
-
-    // 點擊按鈕顯示彈出視窗
-    openModalBtn.onclick = function() {
-      modal.style.display = "flex"; // 顯示視窗
-    }
-
-    // 點擊關閉按鈕隱藏彈出視窗
-    closeModalBtn.onclick = function() {
-      modal.style.display = "none"; // 隱藏視窗
-    }
-
-    // 點擊視窗外部區域也會關閉彈出視窗
-    window.onclick = function(event) {
-      if (event.target === modal) {
-        modal.style.display = "none";
-      }
-    }
-
-      </script>
-
-	<!--script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+	</div>
 	
-	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.1/dist/umd/popper.min.js" integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN" crossorigin="anonymous"></script>
-	
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script-->
+	<!-- 暗化背景，ID是overlay-->
+	<div id="overlay"></div>
+
+	 <!-- 隱藏的表單 -->
+	 <div id="form-container" class="form-container container-fluid gx-6">
+        <form id="data-form">
+            <table>
+                <tr>
+                    <td class="title">日期</td>
+                    <td><input type="date" id="date" required></td>
+                </tr>
+                <tr>
+                    <td class="title">類別</td>
+                    <td>
+                        <select id="category" required>
+                            <option value="">請選擇</option>
+                            <option value="category1">類別1</option>
+                            <option value="category2">類別2</option>
+                        </select>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="title">業者</td>
+                    <td>
+                        <select id="vendor" required>
+                            <option value="">請選擇</option>
+                        </select>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="title">行程</td>
+                    <td>
+                        <select id="itinerary" required>
+                            <option value="">請選擇</option>
+                        </select>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="title">開始時間</td>
+                    <td>
+                        <div class="inline-inputs">
+                            <input type="number" id="start-hour" min="0" max="23" placeholder="時"> :
+                            <input type="number" id="start-minute" min="0" max="59" placeholder="分">
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="title">報到時間</td>
+                    <td><input type="number" id="checkin-time" min="0" placeholder="分鐘" required></td>
+                </tr>
+                <tr>
+                    <td class="title">團號</td>
+                    <td><input type="text" id="group-number" required></td>
+                </tr>
+                <tr>
+                    <td class="title">旅客</td>
+                    <td><input type="text" id="name-phone" placeholder="姓名+電話" required></td>
+                </tr>
+                <tr>
+                    <td class="title">人數</td>
+                    <td>
+                        <div class="inline-inputs">
+                            <input type="number" id="adults" placeholder="大人" min="0">
+                            <input type="number" id="children" placeholder="小孩" min="0">
+                            <input type="number" id="infants" placeholder="抱" min="0">
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="title">活動</td>
+                    <td>
+                        <div class="inline-inputs">
+                            <input type="number" id="snorkel" placeholder="浮潛" min="0">
+                            <input type="number" id="canoe" placeholder="獨木舟" min="0">
+                            <input type="number" id="freestyle" placeholder="自由行" min="0">
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="title">交通</td>
+                    <td>
+                        <div class="inline-inputs">
+                            <input type="number" id="motorbike" placeholder="機車" min="0">
+                            <input type="number" id="bus" placeholder="巴士" min="0">
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="title">備註</td>
+                    <td><textarea id="notes" rows="4" cols="50"></textarea></td>
+                </tr>
+            </table>
+        </form>
+		<div class="text-center">
+		<button type="submit">提交</button>
+        <button id="close-form">關閉</button>
+		</div>
+    </div>
+
+
 </body>
 </html>
