--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </figure>
 
 <div id="myTable">
-    <img id="logo" src="src\logo.png" alt="Logo">
+    <img id="logo" src="https://sonia487.github.io/src/Logo.png" alt="Logo">
 	<div class="container px-4 " style="width: 450px; font-family:DFKai-sb;">
 		<table class=" border-dark table-bordered table table-sm table-responsive-sm" style="background-color: #fcf98e; padding-top: 50%; scale: 1;">
 			<tr class="col">
