--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     		</div>
     		<div class="col">
     			<div class="p-2">
-      			<button type="button" class="btn btn-primary">還在想~</button>
+      			<button type="button" class="btn btn-primary">清空資料</button>
       			</div>
     		</div>
   		</div>
