--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <div id="myTable">
     <img id="logo" src="https://sonia487.github.io/src/Logo.png" alt="Logo">
 	<div class="container px-4 " style="width: 450px; font-family:DFKai-sb;">
-		<table class=" border-dark table-bordered table table-sm table-responsive-sm" style="background-color: #fcf98e; padding-top: 50%; scale: 1;">
+		<table class=" border-dark table-bordered table table-sm table-responsive-sm" style="padding-top: 50%; scale: 1;">
 			<tr class="col">
 				<td class="border-2 text-center" colspan="2" style="font-size: large;">澎湖之美旅行社-電子票券</td>
 			</tr>
