--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
 	<title>E-ticket</title>
 	<!--Local加入CSS檔案，注意路徑寫法-->
 	<link rel="stylesheet" href="css\bootstrap.min.css">
@@ -15,6 +16,7 @@
     <script defer src="js/submit2ticket.js"></script>
     <script defer type="module" src="js/copy_pic.js"></script>
     <script defer src="js/dom-to-image.js"></script>
+    <script defer src="js/share_pic.js"></script>
 </head>
 
 <body>
