--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			</tr>
 			<tr class="border-2 border-top-0 border-bottom-0">
 				<td class="border-1">報到/開始時間</td>
-				<td class="border-1" id="time"></td>
+				<td class="border-1" id="time"><span id="info-text">暫定08:00開船</br>出發前一天通知開船時間</span></td>
 			</tr>
 			<tr class="border-2 border-top-0 border-bottom-0">
 				<td class="border-1">行程業者</td>
@@ -160,6 +160,7 @@
                         <div class="inline-inputs">
                             <input type="number" id="start-hour" min="0" max="23" placeholder="時"> :
                             <input type="number" id="start-minute" min="0" max="59" placeholder="分">
+                            <input type="checkbox" id="wait-info">出發前一天通知
                         </div>
                     </td>
                 </tr>
