--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	<div class="container px-4 " style="width: 450px; font-family:DFKai-sb;">
 		<table class=" border-dark table-bordered table table-sm table-responsive-sm" style="padding-top: 50%; scale: 1;">
 			<tr class="col">
-				<td class="border-2 text-center" colspan="2" style="font-size: large;">澎湖之美旅行社-電子票券</td>
+				<td class="border-2 text-center" colspan="2" style="font-size: large; font-weight: bold">澎湖之美旅行社-電子票券</td>
 			</tr>
 			<tr class="border-2 border-top-0 border-bottom-0">
                 <!--這個 style="width: 35%;" 可以調整直線位置-->
@@ -101,7 +101,7 @@
     		</div>
     		<div class="col">
     				<div class="p-2">
-      			<button type="button" class="btn btn-primary">批量製作</button>
+      			<button type="button" class="btn btn-primary" id="manufact">批量製作</button>
       			</div>
     		</div>
     		<div class="col">
