--- a/index.html
+++ b/index.html
@@ -38,33 +38,37 @@
 <div id="myTable">
     <img id="logo" src="https://sonia487.github.io/src/Logo.png" alt="Logo">
 	<div class="container px-4 " style="width: 450px; font-family:DFKai-sb;">
-		<table class=" border-dark table-bordered table table-sm table-responsive-sm" style="padding-top: 50%; scale: 1;">
-			<tr class="col">
+		<table class=" border-dark table-bordered table table-sm table-responsive-sm" style="padding-top: 50%; scale: 1; width: 100%;">
+			<colgroup>
+            <col span="1" class="title" style="width: 27%;"/>
+            <col span="1" class="content" />
+            </colgroup>
+            <tr class="col">
 				<td class="border-2 text-center" colspan="2" style="font-size: large; font-weight: bold">澎湖之美旅行社-電子票券</td>
 			</tr>
 			<tr class="border-2 border-top-0 border-bottom-0">
                 <!--這個 style="width: 35%;" 可以調整直線位置-->
-				<td class="border-1" style="width: 32%;">旅客/電話</td>
+				<td class="border-1" style="white-space: nowrap;">旅客/電話</td>
 				<td class="border-1" id="client"></td>
 			</tr>
 			<tr class="border-2 border-top-0 border-bottom-0">
-				<td class="border-1">日期/行程/人數</td>
+				<td class="border-1" style="white-space: nowrap;">日期/行程/人數</td>
 				<td class="border-1" id="tour-detail"></td>
 			</tr>
 			<tr class="border-2 border-top-0 border-bottom-0">
-				<td class="border-1">報到/開始時間</td>
+				<td class="border-1" style="white-space: nowrap;">報到/開始時間</td>
 				<td class="border-1" id="time"></td>
 			</tr>
 			<tr class="border-2 border-top-0 border-bottom-0">
-				<td class="border-1">行程業者</td>
+				<td class="border-1" style="white-space: nowrap;">行程業者</td>
 				<td class="border-1" id="t-provider"></td>
 			</tr>
 			<tr class="border-2 border-top-0 border-bottom-0">
-				<td class="border-1">報到地點</td>
+				<td class="border-1" style="white-space: nowrap;">報到地點</td>
 				<td class="border-1" id="checkin-add"></td>
 			</tr>
 			<tr class="border-2 border-top-0">
-				<td class="border-1">備註</td>
+				<td class="border-1"style="white-space: nowrap;">備註</td>
 				<td class="border-1" style="flex: 1;" id="ps"></td>
 			</tr>
 		</table>
