--- a/index.html
+++ b/index.html
@@ -122,6 +122,16 @@
 
   	</div>	
 	
+    <!-- ✅ 圖片預覽浮層，初始隱藏 -->
+    <div id="preview-overlay" style="display: none;">
+    <div id="preview-modal">
+        <button id="close-preview" aria-label="關閉預覽">X</button>
+        <div id="preview-content">
+        <!-- 圖片會插入這裡 -->
+        </div>
+    </div>
+    </div>
+
 	<!-- 暗化背景，ID是overlay-->
 	<div id="overlay"></div>
 
