--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 
 	<title>E-ticket</title>
 	<!--Local加入CSS檔案，注意路徑寫法-->
-	<link rel="stylesheet" href="css\bootstrap.min.css">
-	<link rel="stylesheet" href="css\style.css">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link id="theme-style" rel="stylesheet" href="css/newstyle.css">
+	<link rel="stylesheet" href="css/style-toggle.css">
 	<!--Local加入JS檔案，注意路徑寫法-->
 	<script defer src="js/javascript.js"></script>
 	<script defer src="js/html2canvas.js"></script>
@@ -39,46 +40,16 @@
   </figcaption>
 </figure>
 
-<div id="myTable">
-    <img id="logo" src="https://sonia487.github.io/src/Logo.png" alt="Logo">
-	<div class="container px-4 " style="width: 400px; font-family:DFKai-sb;">
-		<table class=" border-dark table-bordered table table-sm table-responsive-sm" style="padding-top: 50%; scale: 1; width: 100%;">
-			<colgroup>
-            <col span="1" class="title" style="width: 27%;"/>
-            <col span="1" class="content" />
-            </colgroup>
-            <tr class="col">
-				<td class="border-2 text-center" colspan="2" style="font-size: large; font-weight: bold">澎湖之美旅行社-電子票券</td>
-			</tr>
-			<tr class="border-2 border-top-0 border-bottom-0">
-                <!--這個 style="width: 35%;" 可以調整直線位置-->
-				<td class="border-1" style="white-space: nowrap;">旅客/電話</td>
-				<td class="border-1" id="client"></td>
-			</tr>
-			<tr class="border-2 border-top-0 border-bottom-0">
-				<td class="border-1" style="white-space: nowrap;">日期/行程/人數</td>
-				<td class="border-1" id="tour-detail"></td>
-			</tr>
-			<tr class="border-2 border-top-0 border-bottom-0">
-				<td class="border-1" style="white-space: nowrap;">報到/開始時間</td>
-				<td class="border-1" id="time"></td>
-			</tr>
-			<tr class="border-2 border-top-0 border-bottom-0">
-				<td class="border-1" style="white-space: nowrap;">行程業者</td>
-				<td class="border-1" id="t-provider"></td>
-			</tr>
-			<tr class="border-2 border-top-0 border-bottom-0">
-				<td class="border-1" style="white-space: nowrap;">報到地點</td>
-				<td class="border-1" id="checkin-add"></td>
-			</tr>
-			<tr class="border-2 border-top-0">
-				<td class="border-1"style="white-space: nowrap;">備註</td>
-				<td class="border-1" style="flex: 1;" id="ps"></td>
-			</tr>
-		</table>
-	</div>
-</div>
+  <div class="controls">
+    <label class="toggle-wrapper">
+      <input type="checkbox" id="styleToggle">
+      <span class="toggle-slider"></span>
+    </label>
+    <span id="styleLabel">新版樣式</span>
+  </div>
 
+  <div id="ticket-area"></div>
+  
 
   		<div class="container px-6 text-center " style="width: 400px;">
   		<div class="row justify-content-center gx-6">
@@ -134,6 +105,9 @@
 
 	<!-- 暗化背景，ID是overlay-->
 	<div id="overlay"></div>
+
+  <!-- Toast 通知 -->
+  <div id="toast" style="opacity: 0;">提示訊息</div>
 
 	 <!-- 隱藏的表單 -->
 	 <div id="form-container" class="form-container container-fluid gx-6">
@@ -225,11 +199,12 @@
                 </tr>
             </table>
         </form>
-		<div class="text-center">
-		<button type="submit" onclick="submit2ticket()">提交</button>
-        <button id="close-form">關閉</button>
-		</div>
+		<!-- 按鈕從表單中移除，改為固定在畫面右下 -->
     </div>
-
+    <!-- 固定在畫面右下的提交 + 關閉按鈕 -->
+    <div id="floating-buttons">
+        <button class="btn btn-success" onclick="submit2ticket()">提交</button>
+        <button class="btn btn-secondary" id="close-form">關閉</button>
+    </div>
 </body>
 </html>
