--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div id="side-buttons">
             <button class="btn btn-primary" id="copy_pic">複製</button>
             <button class="btn btn-primary" id="download_pic">下載</button>
-            <button class="btn btn-primary" id="share_pic">分享到~</button>
+            <button class="btn btn-primary" id="share_pic">分享</button>
         </div>
 
  <!--    <div class="container px-6 text-center " style="width: 400px;">
